--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="I'm the Jack Sparrow of software development, bringing a mix of creativity, ingenuity, and fun to every project.  Plus, I can do a lot with a rickety old boat! When code hits the fan and you find yourself saying "Why is all the run gone?", look no further! I'll get things running smoothly."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
