--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Laura Larramore">
+    <meta name="image" property="og:image" content="../../src/assets/images/Logo.png">
     <meta
       name="description"
-      content="I'm the Jack Sparrow of software development, bringing a mix of creativity, ingenuity, and fun to every project.  Plus, I can do a lot with a rickety old boat! When code hits the fan and you find yourself saying &ldquo;Why is all the run gone?&rdquo;, look no further! I'll get things running smoothly."
+      content="I'm the Jack Sparrow of software development, bringing a mix of creativity, ingenuity, and fun to every project.  Plus, I can do a lot with a rickety old boat! When code breaks and you find yourself saying &ldquo;Why is all the run gone?&rdquo;, look no further! I'll get things running smoothly."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
