--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Laura Larramore">
-    <meta name="image" property="og:image" content="../../src/assets/images/Logo.png">
+    <meta name="image" property="og:image" content="https://lauralarramore.com/src/assets/images/Logo.png">
     <meta
       name="description"
       content="I'm the Jack Sparrow of software development, bringing a mix of creativity, ingenuity, and fun to every project.  Plus, I can do a lot with a rickety old boat! When code breaks and you find yourself saying &ldquo;Why is all the run gone?&rdquo;, look no further! I'll get things running smoothly."
